hphp/test/slow/reassign_this/1495.php.expectf
HipHop Fatal error: Cannot re-assign $this in %s/test/slow/reassign_this/1495.php on line 6
